--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
-    "jupyter_server>=2.0.1,<3"
+    "aiosqlite",
+    "jupyter_server>=2.0.1,<3",
+    "SQLAlchemy[asyncio]>=2.0.0"
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 
