--- a/package.json
+++ b/package.json
@@ -64,13 +64,16 @@
         "@jupyterlab/codeeditor": "^4.0.0",
         "@jupyterlab/coreutils": "^6.0.0",
         "@jupyterlab/filebrowser": "^4.0.0",
+        "@jupyterlab/metadataform": "^4.0.0",
         "@jupyterlab/notebook": "^4.0.0",
         "@jupyterlab/services": "^7.0.0",
         "@jupyterlab/settingregistry": "^4.0.0",
         "@jupyterlab/translation": "^4.0.0",
         "@jupyterlab/ui-components": "^4.0.0",
         "@lumino/commands": "^2.0.0",
+        "@lumino/coreutils": "^2.0.0",
         "@lumino/signaling": "^2.0.0",
+        "@lumino/widgets": "^2.0.0",
         "react": "^18.2.0"
     },
     "devDependencies": {
