--- a/package.json
+++ b/package.json
@@ -28,9 +28,6 @@
         "type": "git",
         "url": "https://github.com/QuantStack/jupyter-sql-cell.git"
     },
-    "workspaces": [
-        "ui-tests"
-    ],
     "scripts": {
         "build": "jlpm build:lib && jlpm build:labextension:dev",
         "build:prod": "jlpm clean && jlpm build:lib:prod && jlpm build:labextension",
@@ -60,9 +57,9 @@
     },
     "dependencies": {
         "@jupyterlab/application": "^4.0.0",
-        "@jupyterlab/settingregistry": "^4.0.0",
         "@jupyterlab/coreutils": "^6.0.0",
-        "@jupyterlab/services": "^7.0.0"
+        "@jupyterlab/services": "^7.0.0",
+        "@jupyterlab/settingregistry": "^4.0.0"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
@@ -102,14 +99,14 @@
     },
     "jupyterlab": {
         "discovery": {
-        "server": {
-            "managers": [
-                "pip"
-            ],
-            "base": {
-                "name": "jupyter_sql_cell"
+            "server": {
+                "managers": [
+                    "pip"
+                ],
+                "base": {
+                    "name": "jupyter_sql_cell"
+                }
             }
-        }
         },
         "extension": true,
         "outputDir": "jupyter_sql_cell/labextension",
