--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,8 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
-    "aiosqlite",
     "jupyter_server>=2.0.1,<3",
-    "SQLAlchemy[asyncio]>=2.0.0"
+    "SQLAlchemy[asyncio]>=2.0.0",
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 
