--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dependencies": {
         "@jupyter/ydoc": "^1.0.0",
         "@jupyterlab/application": "^4.0.0",
+        "@jupyterlab/apputils": "^4.0.0",
         "@jupyterlab/cells": "^4.0.0",
         "@jupyterlab/codeeditor": "^4.0.0",
         "@jupyterlab/coreutils": "^6.0.0",
